add note: bbsim is public

--- a/experiments.tex
+++ b/experiments.tex
@@ -21,10 +21,12 @@ This section evaluate Cerberus by answering several key questions.
         \item \textbf{Q2}: Will job demand on burst buffer affect Cerberus?
                 Why bother to divide the job execution into 3 phases?
         \item \textbf{Q3}: Can dynamic programming based optimization
-                make Cerberus even better?
+                makes Cerberus even better?
 \end{itemize}
-We integrate Cerberus into our newly developed event-driven simulator, BBSim, and evaluate Cerberus agaist the traditional FCFS/EASY backfilling scheduler.
-
+We integrate Cerberus into our newly developed event-driven simulator, 
+BBSim, and evaluate Cerberus agaist the traditional FCFS/EASY backfilling scheduler.
+We make the source code of BBsim and Cerberus public to the community,
+which can be obtained online~\cite{bbsim-repo}.
 % metric
 
 % We select two evaluation metrics, job's \textit{response time} and 
