--- a/intro.tex
+++ b/intro.tex
@@ -88,7 +88,7 @@ Our contributions in this paper are summarized as follows:
         \item On the basis of 3-phase job model, we present Cerberus,
                 a burst buffer aware HPC workload scheduler.
                 Dividing the lifetime of user application to different phases,
-                Cerberus makes it possible to conquer the scheduling goal separately.
+                Cerberus conquers the scheduling goal separately.
         \item We suggest different optimizing goals for each phases.
                 Though optimal scheduling problem in each phase is NP-hard,
                 dynamic programming with memorization could give precise solutions
