Minor changes. Add a table
Signed-off-by: littlepretty@Mac <littlepretty881203@gmail.com>

--- a/experiments.tex
+++ b/experiments.tex
@@ -26,7 +26,7 @@ This section evaluate Cerberus by answering several key questions.
 We integrate Cerberus into our newly developed event-driven simulator, 
 BBSim, and evaluate Cerberus agaist the traditional FCFS/EASY backfilling scheduler.
 We make the source code of BBsim and Cerberus public to the community,
-which can be obtained online~\cite{bbsim-repo}.
+which can be obtained online\footnote{https://github.com/}.
 % metric
 
 % We select two evaluation metrics, job's \textit{response time} and 
